fix scrolling issue
* html element was overflowing and getting a scrollbar. When the navbar overlay was open, the scrollbar was higher in the DOM and was still accessible. This meant that the content behind the fixed navbar that was causing the overflow was still scrollable.
* The solution was to create a <main> below the <div> and give it a max height of 100vh
* 100dvh is better for mobile but is not supported by all browsers. This is why I first set it to 100vh as a fallback then override to 100dvh.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,6 +20,11 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+main {
+  height: 100vh;
+  height: 100dvh;
+}
+
 .route {
   position: relative;
 }
